# ovirt-setup-lib

./: .gitignore  MANIFEST.in  Makefile  Makefile.am  README.md  automation.yaml  configure.ac  ovirt-setup-lib.spec.in  setup.py.in
.copr/: Makefile
.github/workflows/: check-patch.yml
automation/: build-artifacts-manual.sh  build-artifacts.packages.el8  build-artifacts.repos.el8  build-artifacts.repos.el9stream  build-artifacts.req  build-artifacts.sh  check-patch.packages  check-patch.packages.el7  check-patch.repos  check-patch.repos.el7  check-patch.req  check-patch.sh  common.sh  coverage.rc  index.html
po/: POTFILES.in
src/: Makefile.am
src/ovirt_setup_lib/: Makefile.am  __init__.py  dialog.py  hostname.py
tests/: Makefile.am  __init__.py  commons.py  test_hostname.py
